# pico-beacon-c

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
src/: le_advertise.c  profile.h
